<resources>
    <string name="app_name">One-Sec</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_about">Explore One-Sec</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_contact">Contact us</string>
    <string name="menu_tnc">Policy</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Account Settings</string>
    <string name="menu_profile">Profile</string>

    <string name="login_credentials">Credentials</string>
    <string name="app_lock">App Locker</string>
    <string name="photo_vault">Photo Vault</string>
    <string name="notes">Notes</string>
    <string name="credit_card">Credit Card</string>


    <string name="dummy_name">dummy name</string>


    <string name="lock_first_btn" formatted="false">Protection (% s)</string>
     
    <string name="lockscreen_access_pattern_cell_added">Added cell</string>
        
    <string name="lockscreen_access_pattern_start">Draw unlock pattern</string>
        
    <string name="lockscreen_access_pattern_detected">Pattern has been saved </string>
        
    <string name="lockscreen_access_pattern_cleared">Pattern has been deleted </string>
          
    <string name="lock_recording_intro_header">Set the App\'s unlock pattern</string>
        
    <string name="lock_settings_help_how_to_record">How to draw an unlock pattern</string>
        
    <string name="lock_recording_incorrect_too_short">You should connect at least 4 points.</string>
        
    <string name="lock_pattern_entered_header">Record pattern</string>
        
    <string name="lock_need_to_confirm">Draw the pattern again to confirm</string>
        
    <string name="lock_need_to_unlock_wrong">The pattern do not match. Please try again.</string>
        
    <string name="password_gestrue_tips">Draw pattern to unlock</string>
        
    <string name="password_error_count">The pattern does not match. Please try again.</string>
        
    <string name="lock_draw_unlock_pattern">Draw the unlock pattern</string>
        
    <string name="lock_enter_pin_code">Enter a numeric password</string>
        
    <string name="lock_pattern_confirmed_header">Confirmed Pattern</string>
     
        <!--Digital unlock related-->
        
    <string name="num_create_text_01">Enter a 4-digit password to unlock</string>
        
    <string name="num_create_text_02">Enter again to confirm</string>
        
    <string name="num_create_text_03">Password does not match, please try again</string>
        
    <string name="number_1">1</string>
        
    <string name="number_2">2</string>
        
    <string name="number_3">3</string>
        
    <string name="number_4">4</string>
        
    <string name="number_5">5</string>
        
    <string name="number_6">6</string>
        
    <string name="number_7">7</string>
        
    <string name="number_8">8</string>
        
    <string name="number_9">9</string>
        
    <string name="number_0">0 </string>
        
    <string name="password_short">Please enter at least 4 characters. </string>
     
       
    <string-array name="lock_time_array">
                
        <item>15 seconds</item>
                
        <item>30 seconds</item>
                
        <item>1 minute</item>
                
        <item>3 minutes</item>
                
        <item>5 minutes</item>
                
        <item>10 minutes</item>
                
        <item>30 minutes</item>
                
        <item>Immediately </item>
            
    </string-array>
     
        
    <string name="dialog_tip"> Your Android version is greater than or equal Android 5.0, App Lock need to get the \"Application Usage\" permission
    </string>
    <string name="upstream_developer">Upstream Developer</string>
    <string name="up_stream_deve_name_espoir">Espoir</string>
    <string name="welcome_to_the_app_lock">Welcome to the App lock</string>
    <string name="reset">Reset</string>
    <string name="create_pattern">Create pattern</string>
    <string name="please_draw_your_pattern">Please draw your pattern</string>
    <string name="identity_confirmation">Identity confirmation</string>
    <string name="search_application">Search Apps</string>
    <string name="settings">Settings</string>
    <string name="lock_settings">Lock Settings</string>
    <string name="lock_immediately_after_locking_the_screen">Lock app immediately locking the phone</string>
    <string name="open">Open</string>
    <string name="change_the_password">Change the pattern</string>
    <string name="show_pattern">Show pattern</string>
    <string name="hide_pattern">Hide pattern</string>
    <string name="about_me">About Me</string>
    <string name="go_to_give_permission">Grant Permission</string>
    <string name="warning">Warning</string>
    <string name="search_applications">Search Apps&#8230;</string>
    <string name="search_for">Search For&#8230;</string>
    <string name="take_a_photo">Intruder selfie</string>
    <string name="_1_minute">1 minute</string>
    <string name="apps">Apps</string>
    <string name="accessibility_service_description">This permission is only used for locking the apps</string>
    <string name="accessibility_service_name">App lock</string>
    <string name="lock_type">Lock Type</string>
    <string name="pattern_is_required">Pattern is required when the Locked Apps are opened</string>
    <string name="pattern_is_not_required">Pattern is not required when the Locked Apps opened</string>
    <string name="intruder_selfie">Intruder Selfie</string>
    <string name="vibrate">Vibration</string>
    <string name="policy_txt">
        Privacy Policy \n\n

Effective date: December 02, 2019
\n\n
One-Sec ("us", "we", or "our") operates the One-Sec mobile application
(hereinafter referred to as the "Service").
\n\n
This page informs you of our policies regarding the collection, use, and
disclosure of personal data when you use our Service and the choices you have
associated with that data. The Privacy Policy for One-Sec has been created
with the help of [Privacy Policy Generator](https://www.termsfeed.com/privacy-
policy-generator/).
\n\n
We use your data to provide and improve the Service. By using the Service, you
agree to the collection and use of information in accordance with this policy.
Unless otherwise defined in this Privacy Policy, the terms used in this
Privacy Policy have the same meanings as in our Terms and Conditions.
\n\n
Definitions
\n\n
  * Service
\n
    Service is the One-Sec mobile application operated by One-Sec
\n\n
  * Personal Data
\n
    Personal Data means data about a living individual who can be identified
    from those data (or from those and other information either in our
    possession or likely to come into our possession).
\n\n
  * Usage Data
\n
    Usage Data is data collected automatically either generated by the use of
    the Service or from the Service infrastructure itself (for example, the
    duration of a page visit).
\n\n
  * Cookies
\n
    Cookies are small files stored on your device (computer or mobile device).
        \n\n
Information Collection and Use
\n
We collect several different types of information for various purposes to
provide and improve our Service to you.
\n\n
Types of Data Collected
\n
Personal Data
\n\n
While using our Service, we may ask you to provide us with certain personally
identifiable information that can be used to contact or identify you
("Personal Data"). Personally identifiable information may include, but is not
limited to:
\n
  * Email address
  * First name and last name
  * Phone number
  * Address, State, Province, ZIP/Postal code, City
  * Cookies and Usage Data
\n\n
Use of Data
\n
One-Sec uses the collected data for various purposes:
\n
  * To provide and maintain the Service
  * To notify you about changes to our Service
  * To allow you to participate in interactive features of our Service when
    you choose to do so
  * To provide customer care and support
  * To provide analysis or valuable information so that we can improve the
    Service
  * To monitor the usage of the Service
  * To detect, prevent and address technical issues
\n\n
Transfer Of Data
\n
Your information, including Personal Data, may be transferred to - and
maintained on - computers located outside of your state, province, country or
other governmental jurisdiction where the data protection laws may differ than
those from your jurisdiction.
\n
If you are located outside Canada and choose to provide information to us,
please note that we transfer the data, including Personal Data, to Canada and
process it there.
\n\n
Contact Us
\n
If you have any questions about this Privacy Policy, please contact us:
\n
  * By email: contact@one-sec.com

</string>
    <string name="about_txt">
        One-Sec developed by:\n\n
        + Avinash \n
        + Upendra \n
        + Amogh \n
        + Harsh \n
        + Rishabh\n
    </string>
    <string name="verify_instructions">Place your finger of the fingerprint sensor or move to a trusted location to verify identity</string>
    <string name="fingerprint_authentication">Authentication</string>
    <string name="add_trusted_place">Add Trusted Place</string>


    <string name="activity_title_home">Notes</string>
    <string name="msg_no_notes">No notes found!</string>
    <string name="lbl_new_note_title">New Note</string>
    <string name="lbl_edit_note_title">Edit Note</string>
    <string name="hint_enter_note">Enter your note!</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="text_no_credentials">No Credentials added. Click (+) button to add Credentials.</string>
    <string name="text_no_albums">No albums created. Click (+) button to create new Album.</string>
</resources>
