<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/nav_profile"
            android:title="@string/menu_profile" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/nav_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@mipmap/nav_contact_us"
                android:title="@string/menu_contact" />

            <item
                android:id="@+id/nav_feedback"
                android:icon="@mipmap/nav_feedback"
                android:title="@string/menu_feedback" />

        </menu>
    </item>

    <item android:title="About">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@mipmap/nav_about_us"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_tnc"
                android:icon="@mipmap/nav_tnc"
                android:title="@string/menu_tnc" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/nav_logout"
                android:title="@string/menu_logout" />

        </menu>
    </item>

</menu>
